# advent_test_task

./: CMakeLists.txt  CMakeSettings.json  main.cpp  readme.md  Тестовое заданиеC.docx
res/: path_finder.qrc  path_finder.rc
res/database/: field.sqlite  fields.db
res/forms/: main_window.ui  settings_window.ui
src/cell_item/: cell_item.cpp  cell_item.h
src/database_proxy/: database_proxy.cpp  database_proxy.h
src/defs/: defs.h
src/field_repository/: field_repository.h
src/main_window/: main_window.cpp  main_window.h
src/mian_window/: main_window.cpp  main_window.h
src/randomizer/: randomizer.cpp  randomizer.h
src/route_builder/: route_builder.cpp  route_builder.h
src/settings_manager/: settings_manager.cpp  settings_manager.h
src/settings_window/: settings_window.cpp  settings_window.h
